@@ -1,5 +1,7 @@
 2011-01-22  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/ia64/sqr_diagonal.asm: Remove.
+
 	* mpn/ia64/sqr_diag_addlsh1.asm: New file.
 
 	* mpn/ia64/ia64-defs.m4: Define some shorter convenience mnemonics.
